# siteEM-dist

./: README.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
siteEM/: __main__.py  assignment.ipynb  assignment.py  test_assignment.py
siteEM/utils/: BaseTranslator.py  __init__.py  bailey_elkan_hacks.py  consensus_pfm.py  nucleotide_count.py  read_in_fasta.py  test_utils.py
